<resources>
    <string name="app_name">Handyman Croatia</string>
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="register_label">Register</string>
    <string name="already_registered">Already registered?</string>
    <string name="feed_placeholder_text">TEST</string>
    <string name="hint_nickname">Nickname</string>
    <string name="text_nickname">Enter your nickname:</string>
    <string name="btn_next"><![CDATA[Next >]]></string>
    <string name="btn_back"><![CDATA[< Back]]></string>
    <string name="text_email">Enter your mail:</string>
    <string name="hint_email">Email</string>
    <string name="text_password">Enter your password:</string>
    <string name="hint_password">Password</string>
    <string name="text_phonenum">Your phone number:</string>
    <string name="hint_phonenum">Phone number</string>
    <string name="btn_createacc">CREATE ACCOUNT</string>
    <string name="text_account_type">Select your account type:</string>
    <string name="rb_business">Business</string>
    <string name="rb_default">Default</string>
    <string name="trackLocationActionText">Track location</string>
    <string name="locationDisplayTextDefault">No location</string>
    
    <string name="google_map_api_key">AIzaSyCweSTmhy5V05OmXnRE-QLvuc-hASp0jA0</string>
    <string name="btn_add_location">Add Location</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="address_not_added">Address not added</string>
    <string name="address_not_available">Not available</string>
    <string name="address_available">Available</string>
    <string name="edit_profile_menu">Edit profile</string>
    <string name="add_location_menu">Add location</string>
    <string name="menu_logout">Sign out</string>
    <string name="updateEmail">Email</string>
    <string name="updateProfileHeading">Edit profile:</string>
    <string name="newEmailInputHint">New email</string>
    <string name="newPassword">New password</string>
    <string name="newNickname">New nickname</string>
    <string name="newPhone">New phonenumber</string>
    <string name="updateLocation">Update location</string>
    <string name="saveChanges">Save changes</string>
    <string name="oldPassword">Old password</string>
    <string name="text_select_jobs">Select your jobs:</string>
    <string name="work_teritory">Work teritory:</string>
    <string name="job">Job:</string>
    <string name="send_offer">Send offer</string>
    <string name="tab_business_details">Details</string>
    <string name="tab_business_rating">Rating</string>
    <string name="no_rating">No rating</string>
    <string name="add_review">Add review</string>

    <string name="grade_prompt">Choose a grade</string>
    <string name="post_review">Post review</string>
    <string name="reviews">Reviews:</string>
    <string name="search">Search</string>
    <string-array name="grades">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="jobs">
        <item>Administrative professions</item>
        <item>Architecture</item>
        <item>Banking</item>
        <item>Finances and accounting</item>
        <item>Electrical engineering</item>
        <item>Design</item>
        <item>Construction</item>
        <item>Installations, maintenance and repairs</item>
        <item>Tellecommunications</item>
        <item>Management</item>
        <item>Forestry</item>
        <item>Security and protection</item>
        <item>Transportation</item>
        <item>Taxi services</item>
    </string-array>

    <string-array name="places">
        <item>Zagrebačka županija</item>
        <item>Karlovačka županija</item>
        <item>Varaždinska županija</item>
        <item>Osječko-baranjska županija</item>
        <item>Primorsko-goranska županija</item>
        <item>Požeško-slavonska županija</item>
        <item>Splitsko-dalmatinska županija</item>
        <item>Istarska županija</item>
        <item>Grad Zagreb</item>
        <item>Nedefinirano</item>

    </string-array>
</resources>
