<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_accountType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_account_type"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <RadioGroup
        android:id="@+id/rg_accType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_accountType"
        android:layout_marginStart="32dp">

        <RadioButton
            android:id="@+id/rb_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_business" />

        <RadioButton
            android:id="@+id/rb_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_default" />

    </RadioGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorCreateAccBg">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            android:layout_gravity="end"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue"
            android:textColor="@color/white" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/btn_back"
            android:background="@color/colorCreateAccBg"
            android:enabled="false"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>