<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/text_password"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="38dp"
        app:layout_constraintBottom_toTopOf="@id/et_password"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:hint="@string/hint_password"
        android:layout_marginStart="10dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorCreateAccBg">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            android:layout_gravity="end"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue"
            android:textColor="@color/white" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/btn_back"
            android:background="@color/colorCreateAccBg" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>