<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_jobs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/text_select_jobs"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="38dp"
        app:layout_constraintBottom_toTopOf="@+id/rg_jobType"/>

    <RadioGroup
        android:id="@+id/rg_jobType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_jobs"
        android:layout_marginStart="32dp">

        <RadioButton
            android:id="@+id/rb_administrative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Administrative professions" />

        <RadioButton
            android:id="@+id/rb_architecture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Architecture" />

        <RadioButton
            android:id="@+id/rb_banking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Banking" />

        <RadioButton
            android:id="@+id/rb_finances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Finances and accounting" />

        <RadioButton
            android:id="@+id/rb_electrical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Electrical engineering" />

        <RadioButton
            android:id="@+id/rb_design"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Design" />

        <RadioButton
            android:id="@+id/rb_construction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Construction" />

        <RadioButton
            android:id="@+id/rb_installations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Installations, maintenance and repairs" />

        <RadioButton
            android:id="@+id/rb_tellecommunications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tellecommunications" />

        <RadioButton
            android:id="@+id/rb_management"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Management" />
        <RadioButton
            android:id="@+id/rb_forestry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forestry" />
        <RadioButton
            android:id="@+id/rb_security"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Security and protection" />

        <RadioButton
            android:id="@+id/rb_transportation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Transportation" />
        <RadioButton
            android:id="@+id/rb_taxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Taxi services" />
    </RadioGroup>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorCreateAccBg">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            android:layout_gravity="end"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue"
            android:textColor="@color/white" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/btn_back"
            android:enabled="true"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>